organizing api dsl